--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,11 +22,11 @@ jobs:
         dotnet-version: 9.0.x
         cache: true
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore vscode-polyglotnotebook-presentation-tools.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build vscode-polyglotnotebook-presentation-tools.sln --no-restore
     - name: Test
-      run: dotnet test --no-build --logger trx --results-directory "TestResults" --verbosity normal
+      run: dotnet test vscode-polyglotnotebook-presentation-tools.sln --no-build --logger trx --results-directory "TestResults" --verbosity normal
     - name: Upload dotnet test results
       uses: actions/upload-artifact@v4
       with:
