--- a/src/sequential-reveal-md-tool/sequential-reveal-md-tool.csproj
+++ b/src/sequential-reveal-md-tool/sequential-reveal-md-tool.csproj
@@ -6,9 +6,21 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>sequential-reveal-md-tool</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Andrew Poole</Authors>
+    <Description>A tool for sequentially revealing Markdown content in Polyglot Notebooks for use in presentations.</Description>
+    <PackageTags>markdown;interactive;dotnet;polyglotnotebook;presentation</PackageTags>
+    <RepositoryUrl>https://github.com/your-repo/vscode-polyglotnotebook-presentation-tools</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/your-repo/vscode-polyglotnotebook-presentation-tools</PackageProjectUrl>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
 
-  
+  <ItemGroup>
+    <None Include="readme.md" Pack="true" PackagePath="." />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.25177.1" />
