--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,10 +23,10 @@ jobs:
         dotnet-version: 9.0.x
 
     - name: Restore dependencies
-      run: dotnet restore vscode-polyglotnotebook-presentation-tools.sln --no-cache
+      run: dotnet restore vscode-polyglotnotebook-presentation-tools.sln
 
     - name: Build
-      run: dotnet build vscode-polyglotnotebook-presentation-tools.sln --no-restore
+      run: dotnet build vscode-polyglotnotebook-presentation-tools.sln --no-restore --configuration Release
 
     - name: Test
       run: dotnet test vscode-polyglotnotebook-presentation-tools.sln --no-build --logger trx --results-directory "TestResults" --verbosity normal
