--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       run: dotnet restore vscode-polyglotnotebook-presentation-tools.sln
 
     - name: Build
-      run: dotnet build vscode-polyglotnotebook-presentation-tools.sln --no-restore --configuration Release
+      run: dotnet build vscode-polyglotnotebook-presentation-tools.sln --no-restore
 
     - name: Test
       run: dotnet test vscode-polyglotnotebook-presentation-tools.sln --no-build --logger trx --results-directory "TestResults" --verbosity normal
@@ -43,4 +43,4 @@ jobs:
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-      run: dotnet nuget push **/bin/Release/*.nupkg --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json
+      run: dotnet nuget push **/bin/*/*.nupkg --api-key $NUGET_API_KEY --source https://api.nuget.org/v3/index.json
