--- a/src/sequential-reveal-md-tool/sequential-reveal-md-tool.csproj
+++ b/src/sequential-reveal-md-tool/sequential-reveal-md-tool.csproj
@@ -8,7 +8,7 @@
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>sequential-reveal-md-tool</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <Authors>Andrew Poole</Authors>
     <Description>A tool for sequentially revealing Markdown content in Polyglot Notebooks for use in presentations.</Description>
     <PackageTags>markdown;interactive;dotnet;polyglotnotebook;presentation</PackageTags>
@@ -16,6 +16,10 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/your-repo/vscode-polyglotnotebook-presentation-tools</PackageProjectUrl>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <releaseNotes>
+    1.1.0 Improvements around round use of css styles 
+    1.0.0 Initial commit
+    </releaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
